--- a/MLBD4.ipynb
+++ b/MLBD4.ipynb
@@ -1546,12 +1546,12 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60ea0df9",
+   "cell_type": "markdown",
+   "id": "15a5e6e5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "С уменьшнием параметра numFeatures качетсво модели падает, так как фичей для ее обучения становится все меньше."
+   ]
   },
   {
    "cell_type": "code",
